fixed ticker z-index

--- a/src/styles/pre-footer.scss
+++ b/src/styles/pre-footer.scss
@@ -31,6 +31,7 @@
     height: 938px;
     width: 100%;
     z-index: 0;
+    pointer-events: none;
   }
   
   &-inner{
